- Alterado configurações do kafka

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -4,18 +4,22 @@ loggers:
 server:
   port: 8081
 spring:
-#  kafka:
-#    consumer:
-#      bootstrap-servers: kafka:9092
-#      group-id: group_id
-#      auto-offset-reset: earliest
-#      key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
-#      value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
-#      properties.spring.json.trusted.packages: br.com.app
-#    producer:
-#      bootstrap-servers: kafka:9092
-#      key-serializer: org.apache.kafka.common.serialization.StringSerializer
-#      value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
+  kafka:
+    consumer:
+      enable-auto-commit: true
+      allow-auto-create-topics: true
+      bootstrap-servers: 192.168.100.22:9092
+      group-id: group_id_uni_pavao
+    producer:
+      offset-storage:
+        topic: topico_uni_pavao
+      status-storage:
+        topic: topico_uni_pavao
+      acks: all
+      client-id: uni_pavao_id
+      bootstrap-servers: 192.168.100.22:9092
+      key-serializer: org.apache.kafka.common.serialization.StringSerializer
+      value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
   datasource:
     driver-class-name: org.h2.Driver
     url: jdbc:h2:mem:banco-alucar
