--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -2,22 +2,27 @@ loggers:
   root:
     level: DEBUG
 server:
+  servlet:
+    context-path: /alucar
   port: 8081
 application:
   title: ALUCAR-APP
   version: 1.0.0.0-SNAPSHOT
 spring:
   datasource:
-    driver-class-name: org.h2.Driver
-    url: jdbc:h2:mem:banco-alucar
-    username: adimn
-    password: a.123456
+#    driver-class-name: org.h2.Driver
+#    url: jdbc:h2:mem:banco-alucar
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://localhost:3306/alucar?useSSL=false&allowMultiQueries=true&serverTimezone=UTC
+    username: root
+    password:
   h2:
     console:
       enabled: true
       path: /h2
   jpa:
     hibernate:
-      ddl-auto: create
+      ddl-auto: update
     show-sql: true
-    database-platform: org.hibernate.dialect.H2Dialect
+#    database-platform: org.hibernate.dialect.H2Dialect
+    database-platform: org.hibernate.dialect.MySQL8Dialect
