--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -9,6 +9,9 @@ application:
   title: ALUCAR-APP
   version: 1.0.0.0-SNAPSHOT
 spring:
+  mvc:
+    pathmatch:
+      matching-strategy: ANT_PATH_MATCHER
   datasource:
 #    driver-class-name: org.h2.Driver
 #    url: jdbc:h2:mem:banco-alucar
