--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -13,19 +13,23 @@ spring:
     pathmatch:
       matching-strategy: ANT_PATH_MATCHER
   datasource:
-#    driver-class-name: org.h2.Driver
-#    url: jdbc:h2:mem:banco-alucar
-    driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/alucar?useSSL=false&allowMultiQueries=true&serverTimezone=UTC
-    username: root
-    password:
+    driver-class-name: org.h2.Driver
+    url: jdbc:h2:mem:alucar;DB_CLOSE_DELAY=-1;INIT=CREATE SCHEMA IF NOT EXISTS alucar
+#    driver-class-name: com.mysql.cj.jdbc.Driver
+#    url: jdbc:mysql://localhost:3306/alucar?useSSL=false&allowMultiQueries=true&serverTimezone=UTC
+#    username: root
+#    password:
   h2:
     console:
       enabled: true
       path: /h2
   jpa:
+    database: h2
     hibernate:
       ddl-auto: update
     show-sql: true
-#    database-platform: org.hibernate.dialect.H2Dialect
-    database-platform: org.hibernate.dialect.MySQL8Dialect
+    database-platform: org.hibernate.dialect.H2Dialect
+#    database-platform: org.hibernate.dialect.MySQL8Dialect
+    properties:
+      default_schema: alucar
+
